--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name="com.pericstudio.drawit.Dashboard"
+            android:name=".activities.DashboardActivity"
             android:label="@string/title_activity_dashboard"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -27,7 +27,7 @@
         </activity>
 
         <activity
-            android:name=".Login"
+            android:name=".activities.LoginActivity"
             android:theme="@style/LoginTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +37,7 @@
         </activity>
 
         <activity
-            android:name="com.pericstudio.drawit.CreateAccount"
+            android:name=".activities.CreateAccountActivity"
             android:label="@string/title_activity_create"
             android:theme="@style/LoginTheme">
             <intent-filter>
